<resources>
    <string name="app_name">MyPillClock</string>

    <string-array name="pillTypeArray">
        <item>pills</item>
        <item>bottles</item>
        <item>ml</item>
        <item>mg</item>
    </string-array>

    <string name="TextViewPillName"> Pill Name:</string>
    <string name="str_tv_add_pill_Quantity">Quantity </string>
    <string name="TextViewFrequency">Frequency (times per day): </string>
    <string name="etFrequencyHint">1 = once per day</string>
    <string name="TextViewAmount">Amount: </string>
    <string name="TextViewTime">Remind Time: </string>
    <string name="TextViewDate">Remind Start Date:</string>
    <string name="PillQty">1</string>
    <string name="NoteFromDoctor">Note From Doctor: </string>
    <string name="save">Save</string>
    <string name="hint_time">12:00 PM</string>
    <string name="NoMoreRecords">No More records available!</string>
    <string name="imgAlarmOnOff">alarmOnOff</string>
    <string name="hello_blank_fragment">hello_blank_fragment</string>
    <string name="Update">UPDATE AND SAVE</string>
    <string name="RxNumber">Rx Number</string>
    <string name="etRxNumberEditDefaultText">0090-klx</string>
    <string name="pillNotificationChannelName">pillNotification</string>
    <string name="btn_pillClockin_item_history">Clock-in History</string>
    <string name="notification_channel_description">RemindPillOnTime</string>
    <string name="action1_takingitnow">Take it now</string>
    <string name="action2_remindMeLater">Remind me later</string>
    <string name="clockinHistory_today">Actions of Today</string>
    <string name="string_clock_in_hitsory_item">pill_name_here</string>
    <string name="tv_diary_main_cv_tv">Food</string>
    <string name="et_dialog_add_dairy_category">Category Name</string>
    <string name="btn1_text_dialog_add_diary_category">Add</string>
    <string name="btn1_text_dialog_add_diary_item">Add</string>
    <string name="btn2_text_dialog_add_dairy_category">Cancel</string>
    <string name="btn2_text_dialog_add_dairy_item">Cancel</string>
    <string name="DiariesOfToday">Diaries of Today</string>
    <string name="string_clock_in_hitsory_diary_item">Diary Item 1</string>
    <string name="string2_clock_in_hitsory_diary_item">13:00</string>
    <string name="string2_clock_in_hitsory_item">14:00</string>
    <string name="diary_item_menu_back">back</string>
    <string name="diary_item_menu_add">add</string>
    <string name="et_dialog_add_dairy_item">Diary Item Name</string>
    <string name="tv_pillClockin_item_pillName">pill name</string>
    <string name="btn_pillClockin_item_clockin">clock in at chosen time</string>
    <string name="str_add_missing_pill_clockin_records">Add Missing Pill Clock-in Records</string>
    <string name="str_add_missing_pill_clockin_pillName">Pill_1</string>
    <string name="str_btn_add_missing_pill_clockin_date">Date</string>
    <string name="str_btn_add_missing_pill_clockin_time">time</string>
    <string name="str_btn_add_missing_pill_clockin_save">Save</string>
    <string name="str_tv_ll_one_pill_clockin_history_name_item">Pill_1</string>
    <string name="str_tv_ll_one_pill_clockin_history_actualTime_item">2021-03-04 16:00</string>
    <string name="str_tv_ll_one_pill_clockin_history_planTime_item">2021-03-04 12:00</string>
    <string name="str_tv_ll_one_pill_clockin_history_planTime_header">Sceduled Time</string>
    <string name="str_tv_ll_one_pill_clockin_history_actualTime_header">Actual Time</string>
    <string name="str_tv_ll_one_pill_clockin_history_name_header">Pill Name</string>
    <string name="str_tv_ll_one_pill_clockin_history_isClockedIn_header">Does this dose taken?</string>
    <string name="str_tb_one_pill_schedule_actual_time_page_download">Download</string>
    <string name="str_tv_add_pill_isRepetitive">Is this pill Repetitive?</string>
    <string name="str_add_pill_rb_pill_is_repetitve">This pill is repetitive</string>
    <string name="str_add_pill_rb_only_this_bottle">Only this bottle</string>


</resources>