<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_item_one_pill_clockin_history"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_ll_one_pill_clockin_history_name_item"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_tv_ll_one_pill_clockin_history_name_item" />

    <TextView
        android:id="@+id/tv_ll_one_pill_clockin_history_planTime_item"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_tv_ll_one_pill_clockin_history_planTime_item" />


    <TextView
        android:id="@+id/tv_ll_one_pill_clockin_history_actualTime_item"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_tv_ll_one_pill_clockin_history_actualTime_item" />


    <ImageView
        android:id="@+id/iv_ll_one_pill_clockin_history_istaken__item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:srcCompat="@drawable/ic_baseline_check_24" />

</LinearLayout>