<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Utilities.PillItemAdapter"
    android:id="@+id/clockInItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_pillClockIn_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_pillClockIn_image"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:id="@+id/iv_pillclockInItem"
                android:layout_width="60dp"
                android:layout_height="80dp"

                app:srcCompat="@drawable/ic_baseline_wb_sunny_24_grey" />

            <TextView
                android:id="@+id/tv_clockInItemPillName"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/tv_pillClockin_item_pillName" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_pill_clockin_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:text="@string/btn_pillClockin_item_clockin" />

        <Button
            android:id="@+id/btn_pill_clockin_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/btn_pillClockin_item_history" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>