<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activities.AddPillActivity"
    android:id="@+id/addPillActivity">

    <!--    Pill Name -->
    <LinearLayout
        android:id="@+id/PillNameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvPillName"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/tvPillName_textSize"
            android:text="@string/TextViewPillName" />

        <EditText
            android:id="@+id/etPillName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="Pill_1"
            android:maxEms="15"
            android:textSize="@dimen/etPillName_textSize"
            android:orientation="horizontal" />

    </LinearLayout>


    <!--    Bottle Quantity Layout-->
    <LinearLayout
        android:id="@+id/ll_add_pill_BottleQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/PillNameLinearLayout">

        <TextView
            android:id="@+id/tv_add_pill_Quantity"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/tvDuration_textSize"
            android:text="@string/str_tv_add_pill_Quantity" />

        <EditText
            android:id="@+id/et_add_pill_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:inputType="number"
            android:maxEms="15"
            android:textSize="@dimen/etDuration_textSize"
            android:text="30"
            android:hint="30"
            android:orientation="horizontal" />
    </LinearLayout>


    <!--    Is Repetitive  Layout-->
    <LinearLayout
        android:id="@+id/ll_add_Pill_isRepetitive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_add_pill_BottleQty">

        <RadioGroup
            android:id="@+id/rg_add_pill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/rb_add_pill_repetitive">

            <TextView
                android:id="@+id/tv_add_pill_isRepetitive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_tv_add_pill_isRepetitive"
                android:textSize="@dimen/etPillName_textSize" />

            <RadioButton
                android:id="@+id/rb_add_pill_repetitive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_add_pill_rb_pill_is_repetitve"
                android:onClick="textOfRbSelected"/>

            <RadioButton
                android:id="@+id/rb_add_pill_only_one_bottle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_add_pill_rb_only_this_bottle"
                android:onClick="textOfRbSelected"/>

        </RadioGroup>


    </LinearLayout>


    <!--    Frequency Layout-->


    <LinearLayout
        android:id="@+id/FrequencyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_add_Pill_isRepetitive">

        <TextView
            android:id="@+id/tvFrequency"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewFrequency"
            android:textSize="@dimen/tvFrequency_textSize" />

        <EditText
            android:id="@+id/etFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/etFrequencyHint"
            android:text="1"
            android:inputType="number"
            android:maxEms="15"
            android:orientation="horizontal"
            android:textSize="@dimen/etFrequency_textSize" />


    </LinearLayout>


    <!--    Amount Layout-->
    <LinearLayout
        android:id="@+id/AmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FrequencyLayout">

        <TextView
            android:id="@+id/tvPillAmount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/etPillName_textSize"
            android:text="@string/TextViewAmount" />

        <EditText
            android:id="@+id/etPillAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:hint="1"
            android:inputType="number"
            android:maxEms="5"
            android:text="2"
            android:textSize="@dimen/etPillAmount_textSize"
            android:orientation="horizontal" />

        <Spinner
            android:id="@+id/spinnerAmountType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/pillTypeArray"
            android:layout_weight="1" />


    </LinearLayout>


    <!--    Pill Remind Start Date Layout-->
    <LinearLayout
        android:id="@+id/PillRemindStartDateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmountLayout">

        <TextView
            android:id="@+id/tvPillRemindStartDate"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/tvPillRemindDate_textSize"
            android:text="@string/TextViewDate"
            />

        <TextView
            android:id="@+id/tvPillDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="@dimen/tvPillTimePicker_textSize"
            android:hint="@string/hint_time"
            android:text="2020-03-11"
            android:onClick="showStartDatePickerDialog" />

    </LinearLayout>

    <!--    Pill Remind Time Layout-->
    <LinearLayout
        android:id="@+id/PillRemindTimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PillRemindStartDateLayout">

        <TextView
            android:id="@+id/tvPillRemindTime"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/tvPillRemindTime_textSize"
            android:text="@string/TextViewTime"
            />

        <TextView
            android:id="@+id/tvPillTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:textSize="@dimen/tvPillTimePicker_textSize"
            android:hint="@string/hint_time"
            android:text="13:23"
            android:onClick="showTimePickerDialog" />

    </LinearLayout>

    <!--    rxNumber Layout-->
    <LinearLayout
        android:id="@+id/rxNumberLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/PillRemindTimeLayout">

        <TextView
            android:id="@+id/tvRxNumber"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/rxNumberTVTextSize"
            android:text="@string/RxNumber" />

        <EditText
            android:id="@+id/etRxNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:inputType="text"
            android:maxEms="30"
            android:textSize="@dimen/rxNumberTextSize"
            android:text="1008-jxl"
            android:orientation="horizontal" />
    </LinearLayout>


    <!--    Doctor's Note Text Field-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LayoutDoctorNoteInput"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="372dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rxNumberLayout"
        android:hint="Doctor's Note (Optional)"
        app:hintAnimationEnabled="true"
        android:scrollbarSize="15dp"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etDoctorNote"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:textSize="@dimen/etDoctorNote_textSize"
        android:gravity="start"
        android:background="@color/colorYellow"
        app:layout_constraintBottom_toBottomOf="@+id/LayoutDoctorNoteInput"
        app:layout_constraintTop_toTopOf="@+id/LayoutDoctorNoteInput" />
    </com.google.android.material.textfield.TextInputLayout>


<!--    Save Button -->
    <Button
        android:id="@+id/saveAddPillBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/colorGreen"
        android:text="@string/save"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutDoctorNoteInput"
        android:clickable="true"/>


</androidx.constraintlayout.widget.ConstraintLayout>