<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".EditPillActivity">

    <!--    Pill Name -->
    <LinearLayout
        android:id="@+id/PillNameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        >

        <TextView
            android:id="@+id/TextViewPillName"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewPillName" />

        <EditText
            android:id="@+id/PillNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="text"
            android:maxEms="15"
            android:orientation="horizontal"
            android:importantForAutofill="no" />

    </LinearLayout>

    <!--    Duration Layout-->
    <LinearLayout
        android:id="@+id/DurationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/PillNameLinearLayout"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/TextViewDuration"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewDuration" />

        <EditText
            android:id="@+id/Duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:maxEms="15"
            android:orientation="horizontal"
            android:autofillHints="24"
            android:gravity="center"/>


    </LinearLayout>

    <!--    Frequency Layout-->
    <LinearLayout
        android:id="@+id/FrequencyLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DurationLayout">

        <TextView
            android:id="@+id/TextViewFrequency"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewFrequency" />

        <EditText
            android:id="@+id/TextEditFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:inputType="number"
            android:maxEms="15"
            android:orientation="horizontal"
            android:autofillHints=""
            android:gravity="center"/>


    </LinearLayout>

    <!--    Amount Layout-->
    <LinearLayout
        android:id="@+id/AmountLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FrequencyLayout">

        <TextView
            android:id="@+id/TextViewAmount"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewAmount" />

        <EditText
            android:id="@+id/TextEditAmountNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:maxEms="5"
            android:orientation="horizontal"
            android:hint="1"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />


    </LinearLayout>

    <!--    Start Time Layout-->
    <LinearLayout
        android:id="@+id/TimeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AmountLayout">

        <TextView
            android:id="@+id/TextViewTime"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/TextViewTime"

             />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextViewTimePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="12:00 "
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:onClick="showTimePickerDialog"/>

    </LinearLayout>

<!--    Save Button -->
    <Button
        android:id="@+id/saveAddPillBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/colorGreen"
        android:foregroundTint="@color/colorGreen"
        android:shadowColor="@color/colorGreen"
        android:text="Save"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TimeLayout" />

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="416dp"
        android:layout_marginTop="400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveAddPillBtn"
        app:layout_constraintVertical_bias="0.535">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Pills"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>